# pygom

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  __init__.py  conda-env.yml  genindex.html  metadata.py  model.py  model_run.py  movement.py  objects.inv  patch.py  patch_model.py  py-modindex.html  pyproject.toml  requirements.txt  results.py  search.html  searchindex.js  setup.py
.github/: pull_request_template.md
.github/workflows/: book.yml  distribute_package.yml  main.yml  python.yml  test_package.yml
_modules/: collections.html  functools.html  index.html
_modules/pygom/approximate_bayesian_computation/: approximate_bayesian_computation.html
_modules/pygom/loss/: confidence_interval.html  get_init.html  loss_type.html  ode_loss.html
_modules/pygom/model/: common_models.html  deterministic.html  epi_analysis.html  ode_utils.html  ode_variable.html  simulate.html  transition.html
_sources/md/: faq.md  parameter_fitting.md
_sources/notebooks/: insights.ipynb  solution.ipynb  time_dependent_params.ipynb
dev/: .buildinfo  index.html  objects.inv  search.html  searchindex.js
dev/_modules/: collections.html  functools.html  index.html
dev/_sources/md/: faq.md  (+1 more)
dev/md/: bib.html  common_models.html  faq.html  installation.html  intro.html  solving.html
dev/notebooks/: definition.html  epijson.html  extract_info.html  model_params.html  model_solver.html  model_spec.html  model_spec_2.html  solution.html  time_dependent_params.html
dev/rst/: autodoc-loss.html  autodoc-model.html  autodoc-utilR.html
doc/: Makefile  README.rst  make.bat  requirements.txt
doc/doc_to_sort/: bvpSimple.rst  common_models.rst  estimate2.rst  faq.rst  fh.rst  initialGuess.rst  stochastic.rst  unrollOde.rst
doc/source/: bvpSimple.rst  conf.py  epi.rst  epijson.rst  estimate1.rst  estimate2.rst  faq.rst  fh.rst  getting_started.rst  gradient.rst  index.rst  initialGuess.rst  profile.rst  ref.rst  refsheet.rst  sir.rst  stochastic.rst  transition.rst
docs/: README.txt  _config.yml  _toc.yml  requirements.txt
docs/bib/: ref.bib
docs/md/: bib.md  building_doc.md  common_models.md  getting_started.md  installation.md  intro.md  module-documentation.md  parameter_fitting.md  pygom_workflow.md  solving.md  unrollOde.md
docs/notebooks/: Digraph.gv  compartmental_models.ipynb  epi.ipynb  epijson.ipynb  extract_info.ipynb  insights.ipynb  model_params.ipynb  model_solve.ipynb  model_solver.ipynb  model_spec.ipynb  sir.ipynb  solution.ipynb  time_dependent_params.ipynb  transition.ipynb
docs/pygom-doc/: _config.yml  _toc.yml  autodoc-abc.rst  autodoc-loss.rst  autodoc-model.rst  autodoc-utilR.rst  autodoc.rst  intro.md  ref.bib  rst_to_md.sh
docs/rst/: autodoc-loss.rst  autodoc-utilR.rst
md/: bib.html  building_doc.html  common_models.html  faq.html  getting_started.html  installation.html  intro.html  parameter_fitting.html  unrollOde.html
notebooks/: .gitignore  ABC loss function tests.ipynb  Demo parallel stochastic simulation.ipynb  KalmanFilterDemo.ipynb  KalmanFilterDocumentation.ipynb  Loss function Calculations.ipynb  ParameterEstimation.ipynb  PyGOM_Ebola.ipynb  PyGOM_SEIRsetup.ipynb  Stochasticity.ipynb  Testing loss functions fitted to simulated data.ipynb  abc_eg.ipynb  debug_tau_leap.ipynb  ebola_model_test.ipynb  epi.html  epijson.html  insights.html  model_params.html  model_solver.html  model_spec_2.html  sir.html  solution.html  stochastic.html  sympy_bug_hunt.ipynb  time_dependent_params.html  transition.html
notebooks/.ipynb_checkpoints/: ParameterEstimation-checkpoint.ipynb  Stochasticity-checkpoint.ipynb
notebooks/common_models/: FitzHugh.html  Legrand_Ebola_SEIHFR.html  Lorenz.html  Lotka_Volterra.html  Lotka_Volterra_4State.html  Robertson.html  SEIR.html  SEIR_Birth_Death.html  SEIR_Birth_Death_Periodic.html  SEIR_Multiple.html  SIR.html  SIR_Birth_Death.html  SIS.html  SIS_Periodic.html  vanDelPol.html
notebooks/paramfit/: bvpSimple.html  estimate1.html  estimate2.html  fh.html  gradient.html  initialGuess.html  params_via_optimization.html  profile.html
notebooks/unroll/: unrollBD.html  unrollHard.html  unrollSimple.html
pygom/: __init__.py
pygom/abc/: abc.py
pygom/approximate_bayesian_computation/: __init__.py  approximate_bayesian_computation.py
pygom/data/: eg1.json
pygom/data_model/: __init__.py
pygom/loss/: __init__.py  base_loss.py  confidence_interval.py  epijson_loss.py  get_init.py  loss_type.py  ode_loss.py  read_epijson.py
pygom/model/: __init__.py  _firstReaction.c  _firstReaction.pyx  _model_verification.py  _ode_composition.py  _tau_leap.c  _tau_leap.pyx  base_ode_model.py  common_models.py  deterministic.py  epi_analysis.py  ode_utils.py  ode_variable.py  simulate.py  stochastic.py  stochastic_simulation.py  transition.py  utils.py
pygom/sbml_translate/: __init__.py  _compartments.py  _generic.py  _kinetic_law.py  _model.py  _parameters.py  _reactions.py  _species.py  _units.py  sbml_wrapper.py
pygom/utilR/: __init__.py  distn.py
rst/: autodoc-abc.html  autodoc-loss.html  autodoc-model.html  autodoc-utilR.html
tests/: __init__.py  simple_jump_process.py  test_abc.py  test_adding_to_parameterlist.py  test_approximate_bayesian_computation.py  test_compile_canary.py  test_epi_analysis.py  test_epijson.py  test_fh_estimate.py  test_input_symbols.py  test_kalman_filter_three_tests.py  test_loss_types.py  test_model_coupled.py  test_model_existing.py  test_model_multiple_origin.py  test_model_vector.py  test_models_estimate.py  test_ode_decomposition.py  test_ode_func.py  test_ode_simulate_jump.py  test_ode_simulate_param.py  test_ode_stochastic_func.py  test_package_basics.py  test_pickle.py  test_sir_discrete_estimate.py  test_sir_estimate.py  test_unroll.ipynb
tests/.pylint.d/: pygom.model.ode_utils.checks_and_conversions1.stats  pygom.utilR.distn1.stats  test_loss_types1.stats
(+369 files in other folders)
